--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://shubhojeet1.github.io/",
   "name": "portfolio-website-main",
   "version": "0.1.0",
   "private": true,
@@ -43,6 +44,7 @@
     "@heroicons/react": "^1.0.6",
     "autoprefixer": "^10.4.2",
     "framer-motion": "^6.5.1",
+    "gh-pages": "^4.0.0",
     "postcss": "^8.4.8",
     "react-icons": "^4.3.1",
     "react-intersection-observer": "^8.33.1",
