--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "aos": "^2.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-github-calendar": "^3.3.4",
     "react-responsive-carousel": "^3.2.23",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
